# autoanalyst

./: .gitignore  README.md  pyproject.toml
notebooks/: 00_load_db.ipynb  01_build_metrics.ipynb  02_build_tree.ipynb  scratchpad.ipynb
src/autoanalyst/category_aggregation/: __init__.py  no_op.py  signature_kernel.py
src/autoanalyst/category_aggregation/enhancers/: __init__.py  absolute_time.py  activity_counter.py  cohort_time.py  lag_step.py
src/autoanalyst/core/: base_classes.py  data_manip.py  exceptions.py  string_maps.py
src/autoanalyst/decision_rules/: xmr.py
src/autoanalyst/entity/: __init__.py  dataframe.py
src/autoanalyst/storage/: __init__.py  dataframe.py
src/autoanalyst/transform/: __init__.py  metric_decomp.py  nonzero_regression.py  subtotal.py
src/autoanalyst/transform/unit_conversion_strategies/: __init__.py  sum_of_whole.py
src/autoanalyst/tree/: __init__.py  node.py  structure.py
